Edited wiki page through web user interface.

--- a/wiki/NlLibDaysDbTable.wiki
+++ b/wiki/NlLibDaysDbTable.wiki
@@ -1,5 +1,5 @@
 #summary ORM te werken met tabellen.
-#sidebar EnLib
+#sidebar NlLib
 <wiki:comment>revision: 1</wiki:comment>
 
 === General information ===
